a couple of new endpoints
